// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/omit-text/demo/basic.md correctly 1`] = `
<div
  class="omitText"
  style="max-width:120px"
>
  这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
</div>
`;

exports[`renders ./components/omit-text/demo/type.md correctly 1`] = `
<div
  class="omitText"
  style="max-width:120px"
>
  这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
</div>
`;

exports[`renders ./components/omit-text/demo/width.md correctly 1`] = `
<div
  class="omitText"
  style="max-width:250px"
>
  这是一段很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的文本
</div>
`;
